Added an endpoint to the table 'GDP (current US$)'
