# backend/routers/router.go
@@ -17,7 +17,7 @@ func CreateRouters() *gin.Engine {
 		v1.GET("gdp-constant-2015-us", controllers.GetGDPConstant2015US)
 		v1.GET("gdp-constant-lcu", controllers.GetGDPConstantLCU)
 		//	v1.GET("gdp-current-lcu", controllers.GetGDPCurrentLCU)
-		//	v1.GET("gdp-current-us", controllers.GetGDPCurrentUS)
+		v1.GET("gdp-current-us", controllers.GetGDPCurrentUS)
 	}
 
 	return Router
